<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".UserInfoEditActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/user_info_activity_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="?attr/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.AppBarOverlay">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/toolbar_title_top_margin"
                android:text="@string/user_info_edit_activity_title"
                android:textSize="@dimen/toolbar_title_text_size"
                android:textColor="@color/white"
                android:layout_gravity="center" />
        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/userinfo_userhead_title_height"
            android:orientation="horizontal"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/userinfo_userhead_title_left_margin"
                    android:layout_marginTop="@dimen/userinfo_userhead_title_top_margin"
                    android:text="@string/user_info_edit_activity_header"
                    android:textSize="@dimen/userinfo_item_text_size"
                    android:textColor="@color/black"
                    android:clickable="false" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />
                <ImageView
                    android:id="@+id/user_info_activity_header_icon"
                    android:layout_width="@dimen/userinfo_userhead_pic_diameter"
                    android:layout_height="@dimen/userinfo_userhead_pic_diameter"
                    android:layout_marginRight="@dimen/userinfo_userhead_pic_right_margin"
                    android:layout_marginTop="@dimen/userinfo_userhead_pic_top_margin"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/user_head_icon"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/userinfo_item_height"
            android:orientation="horizontal"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/userinfo_item_left_margin"
                    android:layout_marginTop="@dimen/userinfo_item_top_margin"
                    android:text="@string/user_info_edit_activity_username"
                    android:textSize="@dimen/userinfo_item_text_size"
                    android:textColor="@color/black"
                    android:clickable="false"/>
                <EditText
                    android:id="@+id/user_info_edit_activity_username_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/userinfo_item_left_margin"
                    android:layout_marginRight="@dimen/userinfo_item_content_right_margin"
                    android:layout_marginTop="@dimen/userinfo_item_top_margin"
                    android:textSize="@dimen/userinfo_item_text_size"
                    android:textColor="@color/black"
                    android:gravity="right"
                    android:background="@null"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/userinfo_item_height"
            android:orientation="horizontal"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/userinfo_item_left_margin"
                    android:layout_marginTop="@dimen/userinfo_item_top_margin"
                    android:text="@string/user_info_edit_activity_mobilenum"
                    android:textSize="@dimen/userinfo_item_text_size"
                    android:textColor="@color/black"
                    android:clickable="false"/>
                <EditText
                    android:id="@+id/user_info_edit_activity_mobilenum_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/userinfo_item_left_margin"
                    android:layout_marginRight="@dimen/userinfo_item_content_right_margin"
                    android:layout_marginTop="@dimen/userinfo_item_top_margin"
                    android:textSize="@dimen/userinfo_item_text_size"
                    android:textColor="@color/black"
                    android:gravity="right"
                    android:background="@null"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/userinfo_item_height"
            android:orientation="horizontal"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/boder">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/userinfo_item_left_margin"
                    android:layout_marginTop="@dimen/userinfo_item_top_margin"
                    android:text="@string/user_info_edit_activity_email"
                    android:textSize="@dimen/userinfo_item_text_size"
                    android:textColor="@color/black"
                    android:clickable="false"/>
                <EditText
                    android:id="@+id/user_info_edit_activity_email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/userinfo_item_left_margin"
                    android:layout_marginRight="@dimen/userinfo_item_content_right_margin"
                    android:layout_marginTop="@dimen/userinfo_item_top_margin"
                    android:textSize="@dimen/userinfo_item_text_size"
                    android:textColor="@color/black"
                    android:gravity="right"
                    android:background="@null"
                    />
            </LinearLayout>
        </LinearLayout>
    <Button
        android:id="@+id/next_btn"
        android:layout_width="@dimen/conform_btn_width"
        android:layout_height="@dimen/conform_btn_height"
        android:layout_marginTop="@dimen/conform_btn_top_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="@dimen/userinfo_item_text_size"
        android:textColor="@color/white"
        android:text="@string/ok"
        android:background="@drawable/login_enter_button"/>

</LinearLayout>